# foxbook

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  NOTICE  PROJECT-PLAN.md  README.md  SECURITY.md  TRADEMARK.md  biome.json  core-isolation.config.json  go.work  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  turbo.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-api.yml  uptime.yml
.husky/: pre-commit  pre-push
__fixtures__/core-isolation/: README.md
adapters/ap2/: package.json
adapters/crewai/: pyproject.toml
adapters/dns/: package.json
adapters/email/: package.json
adapters/endpoint-challenge/: package.json
adapters/gist/: package.json
adapters/langchain/: package.json
adapters/langgraph/: package.json
adapters/mastra/: package.json
adapters/mpp/: package.json
adapters/sigstore/: package.json
apps/scouts/: pyproject.toml
apps/scouts/tests/: test_scouts_bootstrap.py
apps/scrapers/: pyproject.toml
core/: package.json  tsconfig.json
docs/: COMPOSE-WITH-FOXBOOK.md  INTEGRATIONS.md  OPERATIONS.md  PRIOR-ART.md  RATIONALE.md  STATE-AT-STABLE-MODE-CLOSE.md  VERIFY-IN-60-SECONDS.md  distribution.md  outreach.md  pre-mortem-v1.md  rfc-a2a-x-foxbook-extension.md  user-journey.md
port/: 00-CONTEXT-TRANSFER.md  01-foundation-doc-v1.md  02-gemini-grilling.md  03-deep-research-prompt.md  CLAUDE.md  CONTEXT-TRANSFER-V2.md  LOCKED.md  PROJECT-PLAN.md  README.md  foxbook-foundation.md  research-findings-web-scan.md  research-findings.md
schemas/: agent-card.v1.json  capabilities.v1.json  claim-by-handle.v1.json  crypto-test-vectors.json  discover-response.v1.json  merkle-test-vectors.json  tl-leaf.v1.json  typed-reference.v1.json  x-foxbook.v1.json
scripts/: check-core-isolation.mjs  check-generated.mjs  check-no-deskduck.mjs  deploy-api.sh  firehose-tail.sh  generate-types.mjs  preflight-day-N.sh  smoke-and-bench.sh  smoke-test-tier1.mjs
(+134 files in other folders)
