[project]
name = "foxbook-adapters-crewai"
version = "0.0.0"
description = "CrewAI shield adapter — Python framework integration."
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/foxbook_crewai_adapter"]
