[project]
name = "foxbook-scouts"
version = "0.0.0"
description = "Foxbook scout agents — honest-delegation + consent-rule respecting."
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/foxbook_scouts"]
