[project]
name = "foxbook-scrapers"
version = "0.0.0"
description = "Foxbook pre-population scraper — shadow-URL discovery surface."
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/foxbook_scrapers"]
